Small working prototype of DracoWrapper - a class that can be instantiated by SWIG to communicate with the sim through ADE

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -69,6 +69,7 @@ add_subdirectory(Simulator)
 add_subdirectory(Utils)
 add_subdirectory(ExternalSource)
 add_subdirectory(PnC)
+add_subdirectory(ADE)
 if(GTEST_FOUND)
   add_subdirectory(UnitTest)
 endif()
