--- a/Simulator/Dart/Draco/CMakeLists.txt
+++ b/Simulator/Dart/Draco/CMakeLists.txt
@@ -1,5 +1,10 @@
 file(GLOB srcs "*.cpp" "*.hpp")
 
+add_library(worldNode SHARED ${srcs})
+target_link_libraries(worldNode ${DART_LIBRARIES}
+        DracoPnC
+        myUtils)
+
 add_executable(run_draco ${srcs})
 target_link_libraries(run_draco ${DART_LIBRARIES}
                                 DracoPnC
