--- a/PnC/CMakeLists.txt
+++ b/PnC/CMakeLists.txt
@@ -1,4 +1,4 @@
-add_subdirectory(BipedGaitCycle)
+add_subdirectory(GaitCycle)
 add_subdirectory(DracoPnC)
 add_subdirectory(WBC)
 add_subdirectory(MPC)
