--- a/Simulator/Dart/Scorpio/CMakeLists.txt
+++ b/Simulator/Dart/Scorpio/CMakeLists.txt
@@ -2,4 +2,5 @@ file(GLOB srcs "*.cpp" "*.hpp")
 
 add_executable(run_scorpio ${srcs})
 target_link_libraries(run_scorpio ${DART_LIBRARIES}
+                                  ScorpioPnC
                                   myUtils)
