included gait cycle in mpc optimization.

--- a/PnC/MPC/CMakeLists.txt
+++ b/PnC/MPC/CMakeLists.txt
@@ -3,19 +3,22 @@ SET(MPC_HEADERS CMPC.hpp)
 
 add_library(myMPC SHARED ${MPC_SOURCES})
 target_link_libraries(myMPC myUtils
+                            myGaitCycle
                             myGoldfarb
                             myRobotSystem)
 
 add_executable(run_test_mpc_toy run_test_mpc_toy.cpp)
 target_link_libraries(run_test_mpc_toy  myMPC
+                                        myGaitCycle
                                         myUtils
                                         myGoldfarb
                                         myRobotSystem)
 
 add_executable(run_test_mpc test_mpc.cpp)
 target_link_libraries(run_test_mpc myUtils
-                            	   myGoldfarb
-                            	   myRobotSystem)
+                                   myGaitCycle
+                                   myGoldfarb
+                                   myRobotSystem)
 
 
 install(TARGETS myMPC DESTINATION "${INSTALL_LIB_DIR}")
