--- a/Config/Scorpio/TEST/OSC_TEST.yaml
+++ b/Config/Scorpio/TEST/OSC_TEST.yaml
@@ -1,13 +1,13 @@
 test_configuration:
-    xyz_duration: 5.
-    end_effector_target_pos: [ 0.5, 0 , 0.5]
+    xyz_duration: 10.
+    end_effector_target_pos: [1. , 0.2 , 0.73]
     #ori_duration: 10.
     #head_target_pos: [0.5,0.5,0.5,-0.5]
 
 control_configuration:
     osc_position_ctrl:
-        end_effector_kp: [70,70,70]
-        end_effector_kd: [20,20,20]
+        end_effector_kp: [10,10,10]
+        end_effector_kd: [1,1,1]
         q_kp: [100 , 100 , 100 , 100 ,  100 , 100 , 100 ]        
         q_kd: [10   , 10   , 10   , 10   ,  10   , 10   , 10]   
     #osc_orientation_ctrl:
