--- a/Config/Scorpio/TEST/OSC_TEST.yaml
+++ b/Config/Scorpio/TEST/OSC_TEST.yaml
@@ -1,13 +1,14 @@
 test_configuration:
     xyz_duration: 10.
-    end_effector_target_pos: [1. , 0.2 , 0.73]
+    end_effector_target_pos: [0.9 , 0.5 , 1.]
+    #end_effector_target_pos: [1. , 0.2 , 0.73]
     #ori_duration: 10.
     #head_target_pos: [0.5,0.5,0.5,-0.5]
 
 control_configuration:
     osc_position_ctrl:
-        end_effector_kp: [10,10,10]
-        end_effector_kd: [1,1,1]
+        end_effector_kp: [100,100,100]
+        end_effector_kd: [10,10,10]
         q_kp: [100 , 100 , 100 , 100 ,  100 , 100 , 100 ]        
         q_kd: [10   , 10   , 10   , 10   ,  10   , 10   , 10]   
     #osc_orientation_ctrl:
