--- a/Config/Draco/INTERFACE.yaml
+++ b/Config/Draco/INTERFACE.yaml
@@ -3,6 +3,7 @@
 # test_name: walking_test
 # test_name: balancing_test
 test_name: mpc_test
+# test_name: mpc_stand_test
 
 
 #1test_name: rl_walking_test
