--- a/Simulator/Dart/Scorpio/CMakeLists.txt
+++ b/Simulator/Dart/Scorpio/CMakeLists.txt
@@ -3,4 +3,5 @@ file(GLOB srcs "*.cpp" "*.hpp")
 add_executable(run_scorpio ${srcs})
 target_link_libraries(run_scorpio ${DART_LIBRARIES}
                                   ScorpioPnC
+                                  DracoPnC
                                   myUtils)
