--- a/Config/Draco/INTERFACE.yaml
+++ b/Config/Draco/INTERFACE.yaml
@@ -2,8 +2,8 @@
 # test_name: body_test
 # test_name: walking_test
 # test_name: balancing_test
-test_name: mpc_test
-# test_name: mpc_stand_test
+# test_name: mpc_test
+test_name: mpc_stand_test
 
 
 #1test_name: rl_walking_test
