--- a/Config/Scorpio/TEST/OSC_TEST.yaml
+++ b/Config/Scorpio/TEST/OSC_TEST.yaml
@@ -1,6 +1,6 @@
 test_configuration:
     xyz_duration: 10.
-    end_effector_target_pos: [0.9 , 0.5 , 1.]
+    end_effector_target_pos: [0. , 0. , 0.]
     #end_effector_target_pos: [1. , 0.2 , 0.73]
     #ori_duration: 10.
     #head_target_pos: [0.5,0.5,0.5,-0.5]
