begin testing walking reference trajectory module.

--- a/PnC/DracoPnC/CMakeLists.txt
+++ b/PnC/DracoPnC/CMakeLists.txt
@@ -3,6 +3,7 @@ file(GLOB draco_pnc_headers "*.hpp")
 file(GLOB draco_testset_headers "TestSet/*.hpp")
 file(GLOB draco_ctrlset_headers "CtrlSet/*.hpp")
 file(GLOB draco_contactset_headers "ContactSet/*.hpp")
+file(GLOB draco_prediction_module_headers "PredictionModule/*.hpp")
 
 add_library(DracoPnC SHARED ${sources})
 target_link_libraries(DracoPnC ${DART_LIBRARIES}
@@ -23,3 +24,5 @@ install(FILES ${draco_ctrlset_headers} DESTINATION
     "${INSTALL_INCLUDE_DIR}/PnC/DracoPnC/CtrlSet")
 install(FILES ${draco_contactset_headers} DESTINATION
     "${INSTALL_INCLUDE_DIR}/PnC/DracoPnC/ContactSet")
+install(FILES ${draco_prediction_module_headers} DESTINATION
+    "${INSTALL_INCLUDE_DIR}/PnC/DracoPnC/PredictionModule")
