before using cubic interpolation

--- a/Config/Draco/TEST/WALKING_SIM_TEST.yaml
+++ b/Config/Draco/TEST/WALKING_SIM_TEST.yaml
@@ -99,12 +99,16 @@ control_configuration:
         kd: [ 10, 10, 10, 10, 3,10, 10, 10, 10, 3]
         com_kp: [1000.,1000.,100.]
         com_kd: [100., 100., 10.]
+        #com_kp: [1500.,1500.,100.]
+        #com_kd: [150., 150., 10.]
 
     rs_start_trns_ctrl:
         kp: [ 70, 70, 70, 70, 7, 70, 70, 70, 70, 7]
         kd: [ 5, 5, 5, 5, 1,5, 5, 5, 5, 1]
         com_kp: [1000.,1000.,100.]
         com_kd: [100., 100., 10.]
+        #com_kp: [1500.,1500.,100.]
+        #com_kd: [150., 150., 10.]
 
         max_rf_z: 300
         min_rf_z: 3
@@ -114,6 +118,8 @@ control_configuration:
         kd: [ 5, 5, 5, 5, 1,5, 5, 5, 5, 1]
         com_kp: [1000.,1000.,100.]
         com_kd: [100., 100., 10.]
+        #com_kp: [1500.,1500.,100.]
+        #com_kd: [150., 150., 10.]
 
         max_rf_z: 300
         min_rf_z: 3
@@ -123,6 +129,8 @@ control_configuration:
         kd: [ 5, 5, 5, 5, 1,5, 5, 5, 5, 1]
         com_kp: [1000.,1000.,100.]
         com_kd: [100., 100., 10.]
+        #com_kp: [1500.,1500.,100.]
+        #com_kd: [150., 150., 10.]
 
         max_rf_z: 300
         min_rf_z: 3
@@ -132,6 +140,8 @@ control_configuration:
         kd: [ 5, 5, 5, 5, 1,5, 5, 5, 5, 1]
         com_kp: [1000.,1000.,100.]
         com_kd: [100., 100., 10.]
+        #com_kp: [1500.,1500.,100.]
+        #com_kd: [150., 150., 10.]
 
         max_rf_z: 300
         min_rf_z: 3
@@ -141,15 +151,23 @@ control_configuration:
         kd: [ 5, 5, 5, 5, 1,5, 5, 5, 5, 1]
         com_kp: [1000.,1000.,100.]
         com_kd: [100., 100., 10.]
+        #com_kp: [1500.,1500.,100.]
+        #com_kd: [150., 150., 10.]
 
         foot_pos_kp: [200., 400., 100.]
         foot_pos_kd: [20., 40., 10.]
+        #foot_pos_kp: [400., 400., 100.]
+        #foot_pos_kd: [40., 40., 10.]
 
     l_ss_ctrl:
         kp: [ 70, 70, 70, 70, 7, 70, 70, 70, 70, 7]
         kd: [ 5, 5, 5, 5, 1,5, 5, 5, 5, 1]
         com_kp: [1000.,1000.,100.]
         com_kd: [100., 100., 10.]
+        #com_kp: [1500.,1500.,100.]
+        #com_kd: [150., 150., 10.]
 
         foot_pos_kp: [200., 400., 100.]
         foot_pos_kd: [20., 40., 10.]
+        #foot_pos_kp: [400., 400., 100.]
+        #foot_pos_kd: [40., 40., 10.]
