--- a/Config/Draco/TEST/MPC_WALK_TEST.yaml
+++ b/Config/Draco/TEST/MPC_WALK_TEST.yaml
@@ -9,10 +9,8 @@ test_configuration:
     stabilization_duration: 2.0 # Time to stabilize the CoM after ramping up the reaction force
     com_ctrl_time: 1000000.0
 
-    # Left and right sway
-    sway_start_time: 6 # seconds. Must be greater than the sum of contact transition time and stabilization duration
-    sway_magnitude: 0.04  # meters
-    sway_period: 2 # seconds
+    # Walk Start TIme
+    walk_start_time: 6 # seconds. Must be greater than the sum of contact transition time and stabilization duration
 
 control_configuration:
     joint_position_ctrl:
