--- a/Config/Draco/TEST/MPC_WALK_TEST.yaml
+++ b/Config/Draco/TEST/MPC_WALK_TEST.yaml
@@ -77,4 +77,5 @@ control_configuration:
         mpc_smooth_from_prev: true # Whether to use the previous solution to smooth the current solution
         mpc_toe_heel_smooth: 1e-4 # Parameter for smoothing the forces between the toe and the heel
         mpc_do_toe_heel_smoothing: false # Whether to use toe heel smoothing
-        mpc_cost_vec: [2.5, 2.5, 2.5, 10.0, 10.0, 30.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 0.0]
+        # mpc_cost_vec: [2.5, 2.5, 2.5, 10.0, 10.0, 30.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 0.0]
+        mpc_cost_vec: [2.5, 2.5, 2.5, 2.5, 2.5, 30.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 0.0]
