--- a/Config/Draco/TEST/MPC_WALK_TEST.yaml
+++ b/Config/Draco/TEST/MPC_WALK_TEST.yaml
@@ -26,11 +26,15 @@ control_configuration:
         position_break_freq: 1.0 # Hz # 0.0 # Higher value decays to current jpos faster
 
         # Task Weights
-        foot_rz_xyz_kp: [200.0, 200.0, 1000.0, 1000.0]
-        foot_rz_xyz_kd: [62, 62, 62, 62]
+        # foot_rz_xyz_kp: [200.0, 200.0, 1000.0, 1000.0]
+        # foot_rz_xyz_kd: [62, 62, 62, 62]
+        foot_rz_xyz_kp: [400.0, 400.0, 1000.0, 1000.0]
+        foot_rz_xyz_kd: [40, 40, 64, 64]
 
-        com_kp: [4000.0, 4000.0, 4000.0]
-        com_kd: [126.0, 126.0, 126.0]
+        com_kp: [2000.0, 2000.0, 2000.0]
+        com_kd: [88.0, 88.0, 88.0]
+        # com_kp: [4000.0, 4000.0, 4000.0]
+        # com_kd: [126.0, 126.0, 126.0]
  
         body_kp: [100.0, 100.0, 100.0]
         body_kd: [20.0, 20.0, 20.0]
