--- a/Config/Draco/TEST/MPC_WALK_TEST.yaml
+++ b/Config/Draco/TEST/MPC_WALK_TEST.yaml
@@ -83,8 +83,9 @@ control_configuration:
         mpc_do_toe_heel_smoothing: false # Whether to use toe heel smoothing
         # mpc_cost_vec: [2.5, 2.5, 2.5, 10.0, 10.0, 30.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 0.0]
         mpc_cost_vec: [2.5, 2.5, 2.5, 2.5, 2.5, 30.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 0.0]
-        mpc_cost_vec_walk: [0.0, 0.0, 0.0, 0.0, 0.0, 30.0, 1.0, 1.0, 1.0, 0.0, 0.0, 0.0, 0.0]
-        # mpc_terminal_cost_vec: [2.5, 2.5, 2.5, 2.5, 2.5, 30.0, 1.0, 1.0, 1.0, 1.0, 1.0, 1.0, 0.0]
-        mpc_terminal_cost_vec: [2.5, 2.5, 2.5, 50.0, 50.0, 300.0, 10.0, 10.0, 10.0, 10.0, 10.0, 10.0, 0.0]        
-
+        # mpc_cost_vec_walk: [0.0, 0.0, 0.0, 0.0, 0.0, 30.0, 1.0, 1.0, 1.0, 0.0, 0.0, 0.0, 0.0]
+        # mpc_cost_vec_walk: [0.0, 0.0, 0.0, 0.0, 0.0, 0.0, 10.0, 10.0, 10.0, 0.0, 0.0, 10.0, 0.0]
+        mpc_cost_vec_walk: [0.0, 0.0, 0.0, 0.0, 0.0, 5.0, 5.0, 5.0, 5.0, 1.0, 1.0, 10.0, 0.0]
+        # mpc_terminal_cost_vec: [2.5, 2.5, 2.5, 50.0, 50.0, 300.0, 10.0, 10.0, 10.0, 10.0, 10.0, 10.0, 0.0]        
+        mpc_terminal_cost_vec: [2.5, 2.5, 2.5, 100.0, 100.0, 300.0, 10.0, 10.0, 10.0, 30.0, 30.0, 30.0, 0.0]        
 
