--- a/Config/Scorpio/SIMULATION.yaml
+++ b/Config/Scorpio/SIMULATION.yaml
@@ -3,18 +3,10 @@ servo_rate: 0.001 # !!this should be match with controller servo rate!!
 #show_viewer: false
 show_viewer: true
 num_steps_per_cycle: 30
-display_joint_frame: true
+#display_joint_frame: true
+display_joint_frame: false
 display_target_frame: true
 actuator_type: 1 # servo mode 
 #actuator_type: 1 # force mode
 #q_init: [180,	-65,	180,	-65,	180]
-<<<<<<< HEAD
 q_init: [ -90,  0,	-90,	0,	0]
-
-
-
-
-
-=======
-q_init: [ 0,  0,	0,	0,	0]
->>>>>>> c752f51abf2098d03a4b9ee52e3d2d1980c8d9da
