--- a/PnC/ScorpioPnC/CMakeLists.txt
+++ b/PnC/ScorpioPnC/CMakeLists.txt
@@ -1,23 +1,21 @@
 file(GLOB_RECURSE sources "*.cpp")
 file(GLOB scorpio_pnc_headers "*.hpp")
-#file(GLOB draco_testset_headers "TestSet/*.hpp")
-#file(GLOB draco_ctrlset_headers "CtrlSet/*.hpp")
-#file(GLOB draco_contactset_headers "ContactSet/*.hpp")
+file(GLOB scorpio_testset_headers "TestSet/*.hpp")
+file(GLOB scorpio_taskset_headers "TaskSet/*.hpp")
+file(GLOB scorpio_ctrlset_headers "CtrlSet/*.hpp")
 
 add_library(ScorpioPnC SHARED ${sources})
 target_link_libraries(ScorpioPnC ${DART_LIBRARIES}
                                myRobotSystem
                                myUtils
                                myWBC)
-                               #myFilters
-                               #myPlanner)
 
 install(TARGETS ScorpioPnC DESTINATION "${INSTALL_LIB_DIR}")
 install(FILES ${scorpio_pnc_headers} DESTINATION
     "${INSTALL_INCLUDE_DIR}/PnC/ScorpioPnC")
-#install(FILES ${draco_testset_headers} DESTINATION
-    #"${INSTALL_INCLUDE_DIR}/PnC/DracoPnC/TestSet")
-#install(FILES ${draco_ctrlset_headers} DESTINATION
-    #"${INSTALL_INCLUDE_DIR}/PnC/DracoPnC/CtrlSet")
-#install(FILES ${draco_contactset_headers} DESTINATION
-    #"${INSTALL_INCLUDE_DIR}/PnC/DracoPnC/ContactSet")
+install(FILES ${scorpio_testset_headers} DESTINATION
+    "${INSTALL_INCLUDE_DIR}/PnC/ScorpioPnC/TestSet")
+install(FILES ${scorpio_ctrlset_headers} DESTINATION
+    "${INSTALL_INCLUDE_DIR}/PnC/ScorpioPnC/CtrlSet")
+install(FILES ${scorpio_taskset_headers} DESTINATION
+    "${INSTALL_INCLUDE_DIR}/PnC/ScorpioPnC/TaskSet")
