Scorpio API under developing

--- a/Config/Scorpio/SIMULATION.yaml
+++ b/Config/Scorpio/SIMULATION.yaml
@@ -3,8 +3,8 @@ servo_rate: 0.001 # !!this should be match with controller servo rate!!
 #show_viewer: false
 show_viewer: true
 num_steps_per_cycle: 30
-#display_joint_frame: true
-display_joint_frame: false
+display_joint_frame: true
+#display_joint_frame: false
 display_target_frame: true
 actuator_type: 1 # servo mode 
 #actuator_type: 1 # force mode
