--- a/Config/Scorpio/TEST/GRASPING_TEST.yaml
+++ b/Config/Scorpio/TEST/GRASPING_TEST.yaml
@@ -1,14 +1,16 @@
 test_configuration:
-    moving_duration: 2.
+    moving_duration: 5.
 
 control_configuration:
     osc_ctrl:
         lin_kp: [100. , 100. , 100.]
-        lin_kd: [10.  , 10.  , 10.]
-        ori_kp: [100. , 100. , 100.]
-        ori_kd: [10.  , 10.  , 10.]
+        lin_kd: [20.  , 20.  , 20.]
+        ori_kp: [100. , 100.]
+        ori_kd: [10.  , 10.]
+        #q_kp: [100    , 100  , 100 , 100 , 100 , 100 , 100 ]
+        #q_kd: [10     , 10   , 10  , 10  , 10  , 10  , 10]
         q_kp: [100    , 100  , 100 , 100 , 100 , 100 , 100 ]
-        q_kd: [10     , 10   , 10  , 10  , 10  , 10  , 10]
+        q_kd: [20     , 20   , 20  , 20  , 20  , 20  , 20]
     grasping_ctrl:
-        q_kp: [50    , 50  , 50 , 50 , 50 , 50 , 50 ]
-        q_kd: [1     , 1   , 1  , 1  , 1  , 1  , 1]
+        q_kp: [100    , 100  , 100 , 100 , 100 , 100 , 100 ]
+        q_kd: [20     , 20   , 20  , 20  , 20  , 20  , 20]
