Scorpio API added

--- a/Config/Scorpio/TEST/GRASPING_TEST.yaml
+++ b/Config/Scorpio/TEST/GRASPING_TEST.yaml
@@ -4,9 +4,9 @@ test_configuration:
 control_configuration:
     osc_ctrl:
         lin_kp: [100. , 100. , 100.]
-        lin_kd: [20.  , 20.  , 20.]
-        ori_kp: [100. , 100.]
-        ori_kd: [10.  , 10.]
+        lin_kd: [10.  , 10.  , 10.]
+        ori_kp: [100. , 100., 100.]
+        ori_kd: [10.  , 10., 10.]
         #q_kp: [100    , 100  , 100 , 100 , 100 , 100 , 100 ]
         #q_kd: [10     , 10   , 10  , 10  , 10  , 10  , 10]
         q_kp: [100    , 100  , 100 , 100 , 100 , 100 , 100 ]
