finding good positions for object, still need to make grasping realistic. should thinkg about dropping

--- a/Config/Scorpio/TEST/GRASPING_TEST.yaml
+++ b/Config/Scorpio/TEST/GRASPING_TEST.yaml
@@ -3,14 +3,17 @@ test_configuration:
 
 control_configuration:
     osc_ctrl:
-        lin_kp: [100. , 100. , 100.]
-        lin_kd: [10.  , 10.  , 10.]
-        ori_kp: [100. , 100., 100.]
-        ori_kd: [10.  , 10., 10.]
+        lin_kp: [4. , 4. , 4.]
+        lin_kd: [4.  , 4.  , 4.]
+        #ori_kp: [4. , 4., 4.]
+        #ori_kd: [4.  , 4., 4.]
+        ori_kp: [4., 4.]
+        ori_kd: [4., 4.]
         #q_kp: [100    , 100  , 100 , 100 , 100 , 100 , 100 ]
         #q_kd: [10     , 10   , 10  , 10  , 10  , 10  , 10]
-        q_kp: [100    , 100  , 100 , 100 , 100 , 100 , 100 ]
-        q_kd: [20     , 20   , 20  , 20  , 20  , 20  , 20]
+        q_kp: [4    , 4  , 4 , 4 , 4 , 4 , 4 ]
+        q_kd: [4     , 4   , 4  , 4  , 4  , 4  , 4]
     grasping_ctrl:
         q_kp: [100    , 100  , 100 , 100 , 100 , 100 , 100 ]
         q_kd: [20     , 20   , 20  , 20  , 20  , 20  , 20]
+        grasping_time: 1.
