Incorporated latest changes from master into this branch. Switched draco sim to wrap around the scorpio node because that world has both robots in it. Updated scorpio node to take in both pncs so we can send commands from our wrapper, and changed cmake accordingly

--- a/Simulator/Dart/Scorpio/CMakeLists.txt
+++ b/Simulator/Dart/Scorpio/CMakeLists.txt
@@ -1,5 +1,10 @@
 file(GLOB srcs "*.cpp" "*.hpp")
 
+add_library(worldNode SHARED ${srcs})
+target_link_libraries(worldNode ${DART_LIBRARIES}
+        ScorpioPnC
+        myUtils)
+
 add_executable(run_scorpio ${srcs})
 target_link_libraries(run_scorpio ${DART_LIBRARIES}
                                   ScorpioPnC
