Robustify Scorpio Orientation Ctrl

--- a/Config/Scorpio/TEST/GRASPING_TEST.yaml
+++ b/Config/Scorpio/TEST/GRASPING_TEST.yaml
@@ -3,16 +3,16 @@ test_configuration:
 
 control_configuration:
     osc_ctrl:
-        lin_kp: [4. , 4. , 4.]
+        lin_kp: [40. , 40. , 40.]
         lin_kd: [4.  , 4.  , 4.]
-        #ori_kp: [4. , 4., 4.]
-        #ori_kd: [4.  , 4., 4.]
-        ori_kp: [4., 4.]
-        ori_kd: [4., 4.]
-        #q_kp: [100    , 100  , 100 , 100 , 100 , 100 , 100 ]
-        #q_kd: [10     , 10   , 10  , 10  , 10  , 10  , 10]
-        q_kp: [4    , 4  , 4 , 4 , 4 , 4 , 4 ]
-        q_kd: [4     , 4   , 4  , 4  , 4  , 4  , 4]
+        ori_kp: [60. , 60., 60.]
+        ori_kd: [4.  , 4., 4.]
+        #ori_kp: [4., 4.]
+        #ori_kd: [4., 4.]
+        q_kp: [100    , 100  , 100 , 100 , 100 , 100 , 100 ]
+        q_kd: [10     , 10   , 10  , 10  , 10  , 10  , 10]
+        #q_kp: [4    , 4  , 4 , 4 , 4 , 4 , 4 ]
+        #q_kd: [4     , 4   , 4  , 4  , 4  , 4  , 4]
     grasping_ctrl:
         q_kp: [100    , 100  , 100 , 100 , 100 , 100 , 100 ]
         q_kd: [20     , 20   , 20  , 20  , 20  , 20  , 20]
