--- a/Config/Scorpio/SIMULATION.yaml
+++ b/Config/Scorpio/SIMULATION.yaml
@@ -3,15 +3,21 @@ servo_rate: 0.001 # !!this should be match with controller servo rate!!
 #show_viewer: false
 show_viewer: true
 num_steps_per_cycle: 30
-#display_joint_frame: true
-display_joint_frame: false
+display_joint_frame: true
+#display_joint_frame: false
 display_target_frame: true
 actuator_type: 1 # servo mode 
 q_init: [ -90,  0,	-90,	0,	0]
 
 ## Manipulator
-p1: [-0.3, -0.4, -0.15]
-p2: [0.4, -0.7, 0.2]
+#p1: [-0.3, -0.4, -0.15]
+#p2: [-0.3, -0.6, -0.15]
+#
+#p1: [-0.3, -0.4, -0.20]
+#p2: [0.3, 0.4, 0.20]
+
+p1: [-0.3, -0.4, -0.20]
+p2: [-0.1, -0.1, 0.1]
 
 ## Draco
 x: -0.9
