--- a/Config/Scorpio/SIMULATION.yaml
+++ b/Config/Scorpio/SIMULATION.yaml
@@ -1,4 +1,4 @@
-is_record: false
+is_record: true
 servo_rate: 0.001 # !!this should be match with controller servo rate!!
 #show_viewer: false
 show_viewer: true
@@ -10,8 +10,8 @@ actuator_type: 1 # servo mode
 q_init: [ -90,  0,	-90,	0,	0]
 
 ## Camera
-from: [5.21, -5.42, 3.5]
-to: [1.0, 0.2, 0.5]
+from: [8., -6., 3.5]
+to: [1.0, 1.0, 0.5]
 
 ## Manipulator
 p1: [-0.3, -0.4, -0.01]
