--- a/Config/Scorpio/SIMULATION.yaml
+++ b/Config/Scorpio/SIMULATION.yaml
@@ -1,17 +1,18 @@
-is_record: true
+#is_record: true
+is_record: false
 servo_rate: 0.001 # !!this should be match with controller servo rate!!
 #show_viewer: false
 show_viewer: true
 num_steps_per_cycle: 30
-display_joint_frame: true
-#display_joint_frame: false
-display_target_frame: true
+#display_joint_frame: true
+display_joint_frame: false
+display_target_frame: false
 actuator_type: 1 # servo mode 
 q_init: [ -90,  0,	-90,	0,	0]
 
-## Camera
-from: [8., -6., 3.5]
-to: [1.0, 1.0, 0.5]
+## Camera1
+from: [5., -7., 3.5]
+to: [1.5, 1.0, 0.5]
 
 ## Manipulator
 #p1: [-0.3, -0.4, -0.15]
@@ -21,7 +22,7 @@ to: [1.0, 1.0, 0.5]
 #p2: [0.3, 0.4, 0.20]
 
 p1: [-0.3, -0.4, -0.20]
-p2: [-0.1, -0.1, 0.1]
+p2: [-0.1, 0.1, -0.1]
 
 #p1: [-0.3, -0.4, -0.01]
 #p2: [0.4, -0.90, 0.06]
@@ -33,6 +34,6 @@ th: 1.57
 x2: 0.4
 
 ## box kp kd
-box_kp: [200,200,200,200,200,200]
-box_kd: [5,5,5,5,5,5]
+box_kp: [1500,1500,1500,1500,1500,1500]
+box_kd: [1000,1000,1000,1000,1000,1000]
 draco_top_height: 1.150233
