--- a/Config/Scorpio/SIMULATION.yaml
+++ b/Config/Scorpio/SIMULATION.yaml
@@ -1,5 +1,5 @@
-#is_record: true
-is_record: false
+is_record: true
+#is_record: false
 servo_rate: 0.001 # !!this should be match with controller servo rate!!
 #show_viewer: false
 show_viewer: true
@@ -11,8 +11,11 @@ actuator_type: 1 # servo mode
 q_init: [ -90,  0,	-90,	0,	0]
 
 ## Camera1
-from: [5., -7., 3.5]
+from: [5.4, -9.6, 4.2]
 to: [1.5, 1.0, 0.5]
+
+#from: [9.0, 0.1, 4.0]
+#to: [3.5, 0.1, 1.0]
 
 ## Manipulator
 #p1: [-0.3, -0.4, -0.15]
