ubuntu 16.04 compatibility fix and fix for last phase of box

--- a/swig/CMakeLists.txt
+++ b/swig/CMakeLists.txt
@@ -11,4 +11,4 @@ SET_SOURCE_FILES_PROPERTIES(dracoWrapper.i PROPERTIES SWIG_FLAGS "${options}")
 SET(CMAKE_SWIG_OUTDIR ${CMAKE_BINARY_DIR}/swig)
 
 SET_SOURCE_FILES_PROPERTIES(dracoWrapper.i PROPERTIES CPLUSPLUS ON)
-SWIG_ADD_LIBRARY(${PROJECT_NAME} LANGUAGE java SOURCES dracoWrapper.i)
+SWIG_ADD_MODULE(${PROJECT_NAME} java dracoWrapper.i)
