start writing up DCMPhaseWalkingTest

--- a/Config/Draco/INTERFACE.yaml
+++ b/Config/Draco/INTERFACE.yaml
@@ -1,11 +1,12 @@
 #test_name: joint_test
-# test_name: body_test
-# test_name: walking_test
-# test_name: balancing_test
-# test_name: mpc_test
-# test_name: mpc_stand_test
-test_name: mpc_walk_test
-# test_name: dcm_walk_test
+#test_name: body_test
+#test_name: walking_test
+#test_name: balancing_test
+#test_name: mpc_test
+#test_name: mpc_stand_test
+#test_name: mpc_walk_test
+#test_name: dcm_walk_test
+test_name: dcm_phase_walking_test
 
 jpos_min: [-0.6 , -0.4 , -1.15 , -0.2  , 0.64 , -0.6 , -0.4 , -1.15 , -0.2  , 0.64]
 jpos_max: [0.6  , 0.4  , 0.5   , 1.9   , 2.33 , 0.6  , 0.4  , 0.5   , 1.9   , 2.33]
