--- a/Config/Draco/TEST/DCM_PHASE_WALKING_TEST.yaml
+++ b/Config/Draco/TEST/DCM_PHASE_WALKING_TEST.yaml
@@ -7,7 +7,9 @@ test_configuration:
     com_height: 0.7
     stand_up_ctrl_time: 2.0
 
+    initial_double_support_ctrl_time: 0.05
     double_support_ctrl_time: 0.05
+    final_double_support_ctrl_time: 0.05
 
     transition_ctrl_time: 0.2
 
