--- a/Config/Draco/TEST/DCM_PHASE_WALKING_TEST.yaml
+++ b/Config/Draco/TEST/DCM_PHASE_WALKING_TEST.yaml
@@ -36,8 +36,8 @@ control_configuration:
 
         com_task_kp_gain: [200., 200., 200.]
         com_task_kd_gain: [20., 20., 28.]
-        bodyori_task_kp_gain: [5. 5. 5.]
-        bodyori_task_kd_gain: [20. 20. 20.]
+        bodyori_task_kp_gain: [5., 5., 5.]
+        bodyori_task_kd_gain: [20., 20., 20.]
         rfoot_task_kp_gain: [500., 500., 500.]
         rfoot_task_kd_gain: [35., 35., 35.]
         lfoot_task_kp_gain: [500., 500., 500.]
@@ -61,12 +61,14 @@ control_configuration:
 
         com_task_kp_gain: [200., 200., 200.]
         com_task_kd_gain: [20., 20., 28.]
-        bodyori_task_kp_gain: [5. 5. 5.]
-        bodyori_task_kd_gain: [20. 20. 20.]
+        bodyori_task_kp_gain: [5., 5., 5.]
+        bodyori_task_kd_gain: [20., 20., 20.]
         rfoot_task_kp_gain: [500., 500., 500.]
         rfoot_task_kd_gain: [35., 35., 35.]
         lfoot_task_kp_gain: [500., 500., 500.]
         lfoot_task_kd_gain: [35., 35., 35.]
+
+        max_fz: 500.
 
         velocity_break_freq: 2.0
         position_break_freq: 1.0
@@ -84,8 +86,8 @@ control_configuration:
 
         com_task_kp_gain: [200., 200., 200.]
         com_task_kd_gain: [20., 20., 28.]
-        bodyori_task_kp_gain: [5. 5. 5.]
-        bodyori_task_kd_gain: [20. 20. 20.]
+        bodyori_task_kp_gain: [5., 5., 5.]
+        bodyori_task_kd_gain: [20., 20., 20.]
         rfoot_task_kp_gain: [500., 500., 500.]
         rfoot_task_kd_gain: [35., 35., 35.]
         lfoot_task_kp_gain: [500., 500., 500.]
@@ -96,12 +98,42 @@ control_configuration:
         lfoot_line_task_kp_gain: [500., 500., 500., 500., 500.]
         lfoot_line_task_kd_gain: [35., 35., 35., 35., 35.]
 
+        max_fz: 500.
+
         velocity_break_freq: 2.0
         position_break_freq: 1.0
         max_jvel: 2.0 # rad/s - maximum velocity after integration
         max_jpos_error: 0.2 # radians - maximum joint position error after integration 
 
     left_swing_ctrl:
+        com_task_weight: 1e-3
+        bodyori_task_weight: 1e-3
+        rfoot_task_weight: 200.
+        lfoot_task_weight: 200.
+        rf_tracking_weight: 1e-8
+        qddot_reg_weight: 1e-8
+        rf_reg_weight: 1e-16
+
+        com_task_kp_gain: [200., 200., 200.]
+        com_task_kd_gain: [20., 20., 28.]
+        bodyori_task_kp_gain: [5., 5., 5.]
+        bodyori_task_kd_gain: [20., 20., 20.]
+        rfoot_task_kp_gain: [500., 500., 500.]
+        rfoot_task_kd_gain: [35., 35., 35.]
+        lfoot_task_kp_gain: [500., 500., 500.]
+        lfoot_task_kd_gain: [35., 35., 35.]
+
+        rfoot_line_task_kp_gain: [500., 500., 500., 500., 500.]
+        rfoot_line_task_kd_gain: [35., 35., 35., 35., 35.]
+        lfoot_line_task_kp_gain: [500., 500., 500., 500., 500.]
+        lfoot_line_task_kd_gain: [35., 35., 35., 35., 35.]
+
+        max_fz: 500.
+
+        velocity_break_freq: 2.0
+        position_break_freq: 1.0
+        max_jvel: 2.0 # rad/s - maximum velocity after integration
+        max_jpos_error: 0.2 # radians - maximum joint position error after integration 
 
     right_swing_start_ctrl:
         com_task_weight: 1e-3
@@ -114,8 +146,8 @@ control_configuration:
 
         com_task_kp_gain: [200., 200., 200.]
         com_task_kd_gain: [20., 20., 28.]
-        bodyori_task_kp_gain: [5. 5. 5.]
-        bodyori_task_kd_gain: [20. 20. 20.]
+        bodyori_task_kp_gain: [5., 5., 5.]
+        bodyori_task_kd_gain: [20., 20., 20.]
         rfoot_task_kp_gain: [500., 500., 500.]
         rfoot_task_kd_gain: [35., 35., 35.]
         lfoot_task_kp_gain: [500., 500., 500.]
@@ -139,8 +171,8 @@ control_configuration:
 
         com_task_kp_gain: [200., 200., 200.]
         com_task_kd_gain: [20., 20., 28.]
-        bodyori_task_kp_gain: [5. 5. 5.]
-        bodyori_task_kd_gain: [20. 20. 20.]
+        bodyori_task_kp_gain: [5., 5., 5.]
+        bodyori_task_kd_gain: [20., 20., 20.]
         rfoot_task_kp_gain: [500., 500., 500.]
         rfoot_task_kd_gain: [35., 35., 35.]
         lfoot_task_kp_gain: [500., 500., 500.]
@@ -164,8 +196,8 @@ control_configuration:
 
         com_task_kp_gain: [200., 200., 200.]
         com_task_kd_gain: [20., 20., 28.]
-        bodyori_task_kp_gain: [5. 5. 5.]
-        bodyori_task_kd_gain: [20. 20. 20.]
+        bodyori_task_kp_gain: [5., 5., 5.]
+        bodyori_task_kd_gain: [20., 20., 20.]
         rfoot_task_kp_gain: [500., 500., 500.]
         rfoot_task_kd_gain: [35., 35., 35.]
         lfoot_task_kp_gain: [500., 500., 500.]
@@ -189,8 +221,8 @@ control_configuration:
 
         com_task_kp_gain: [200., 200., 200.]
         com_task_kd_gain: [20., 20., 28.]
-        bodyori_task_kp_gain: [5. 5. 5.]
-        bodyori_task_kd_gain: [20. 20. 20.]
+        bodyori_task_kp_gain: [5., 5., 5.]
+        bodyori_task_kd_gain: [20., 20., 20.]
         rfoot_task_kp_gain: [500., 500., 500.]
         rfoot_task_kd_gain: [35., 35., 35.]
         lfoot_task_kp_gain: [500., 500., 500.]
