--- a/Config/Valkyrie/TEST/BALANCE_TEST.yaml
+++ b/Config/Valkyrie/TEST/BALANCE_TEST.yaml
@@ -1,7 +1,7 @@
 test_configuration:
     #target_com: [0, 0, 0.82]
     target_pos_duration: 1.
-    com_pos_deviation: [0,0,-0.3]
+    com_pos_deviation: [0, 0, -0.01]
 
     #swing_duration: 30.
     amplitude: [0,0,0]
