implement joint integrator class.

--- a/UnitTest/TestIHWBC/CMakeLists.txt
+++ b/UnitTest/TestIHWBC/CMakeLists.txt
@@ -6,9 +6,16 @@ target_link_libraries(test_ihwbc_draco ${DART_LIBRARIES}
                                         gtest_main
                                         pthread)
 
-
 add_executable(test_mpc_ihwbc_draco test_mpc_ihwbc_draco.cpp)
 target_link_libraries(test_mpc_ihwbc_draco ${DART_LIBRARIES}
+                                        DracoPnC
+                                        myUtils
+                                        gtest
+                                        gtest_main
+                                        pthread)
+
+add_executable(test_ihwbc_joint_integrator test_ihwbc_joint_integrator.cpp)
+target_link_libraries(test_ihwbc_joint_integrator ${DART_LIBRARIES}
                                         DracoPnC
                                         myUtils
                                         gtest
