place dcm planner and footstep in the plannerSet for other bipeds.

--- a/PnC/PlannerSet/CMakeLists.txt
+++ b/PnC/PlannerSet/CMakeLists.txt
@@ -2,6 +2,7 @@ file(GLOB_RECURSE sources "*.cpp")
 file(GLOB centroid_planner_headers "CentroidPlanner/*.hpp")
 file(GLOB contact_sequence_headers "ContactSequenceGenerator/*.hpp")
 file(GLOB pipm_foot_planner_headers "PIPM_FootPlacementPlanner/*.hpp")
+file(GLOB dcm_planner_headers "DCMPlanner/*.hpp")
 
 if(NOT USE_DRAKE)
     list(REMOVE_ITEM sources
@@ -13,7 +14,8 @@ endif()
 add_library(myPlanner SHARED ${sources}
                              ${centroid_planner_headers}
                              ${pipm_foot_planner_headers}
-                             ${contact_sequence_headers})
+                             ${contact_sequence_headers}
+                             ${dcm_planner_headers})
 
 if(USE_DRAKE)
   target_link_libraries(myPlanner drake::drake)
@@ -30,3 +32,5 @@ install(FILES ${pipm_foot_planner_headers} DESTINATION
     "${INSTALL_INCLUDE_DIR}/PnC/PlannerSet/PIPM_FootPlacementPlanner")
 install(FILES ${contact_sequence_headers} DESTINATION
     "${INSTALL_INCLUDE_DIR}/PnC/PlannerSet/ContactSequenceGenerator")
+install(FILES ${dcm_planner_headers} DESTINATION
+    "${INSTALL_INCLUDE_DIR}/PnC/PlannerSet/DCMPlanner")
