getter for pos/vel limits in robotmodel.hpp. loading controller and integration params from yaml file.

--- a/Config/Valkyrie/SIMULATION.yaml
+++ b/Config/Valkyrie/SIMULATION.yaml
@@ -3,7 +3,8 @@ is_record: false
 show_joint_frame: false
 plot_mpc_result: false
 
+# Low-level Joint PD gains
 control_configuration:
-  kp: 4
+  kp: 4 
   kd: 4
 
