--- a/Config/Valkyrie/TEST/CONTROL_ARCHITECTURE_PARAMS.yaml
+++ b/Config/Valkyrie/TEST/CONTROL_ARCHITECTURE_PARAMS.yaml
@@ -6,11 +6,9 @@ state_stand_params:
 dcm_planner_parameters:
     nominal_com_height: 1.015 # m from the ground    
 
-    # t_init_transfer = t_transfer + t_ds + (1-alpha)*t_ds
-    # t_transfer = t_init_transfer - ((2-alpha)*t_ds)
-    t_transfer: 0.1 # exponential interpolation transfer time during initial transfer or same step transfer
-    t_ds: 0.05 #  support polynomial transfer time
-    t_ss: 0.3 # single support exponential interpolation  time
+    t_additional_init_transfer: 0.0 # seconds. The additional initial transfer time to switch the stance leg
+    t_contact_transition: 0.45 # seconds. The transition time used to change reaction forces and stance leg
+    t_swing: 1.0 # seconds. The single support swing time.
     percentage_settle: 0.99 # percent to converge at the end of the trajectory
     alpha_ds: 0.5 # value between 0.0 and 1.0 for double support DCM interpolation    
 
