--- a/Config/Valkyrie/TEST/CONTROL_ARCHITECTURE_PARAMS.yaml
+++ b/Config/Valkyrie/TEST/CONTROL_ARCHITECTURE_PARAMS.yaml
@@ -1,5 +1,5 @@
 state_stand_params:
-    target_pos_duration: 2.0 # duration to reach target com position
+    target_pos_duration: 1.0 # duration to reach target com position
     time_to_max_normal_force: 0.1 # seconds to maximum normal force. should be small since the robot is unsupported in sim.
     com_pos_target: [0, 0, 1.015] # target com position from the midfoot position in world frame
 
@@ -12,9 +12,16 @@ dcm_planner_parameters:
 
     t_additional_init_transfer: 0.0 # seconds. The additional initial transfer time to switch the stance leg
     t_contact_transition: 0.45 # seconds. The transition time used to change reaction forces and stance leg
-    t_swing: 1.0 # seconds. The single support swing time.
+    t_swing: 0.75 # seconds. The single support swing time.
     percentage_settle: 0.9 # percent to converge at the end of the trajectory
     alpha_ds: 0.5 # value between 0.0 and 1.0 for double support DCM interpolation    
+
+    # Primitive Walking parameters
+    nominal_footwidth: 0.27 # meters. Distance between feet
+    nominal_forward_step: 0.25 # meters. Subsequent forward steps are 2x this value.
+    nominal_backward_step: -0.25 # meters. Subsequent backward steps are 2x this value.
+    nominal_turn_radians: 0.78539 # M_PI/4.0 
+    nominal_strafe_distance: 0.125 # meters
 
 foot_trajectory_parameters:
     swing_height: 0.05 # cm off the ground
